--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.29.1",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^2.0.0",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
+    "googleapis": "^100.0.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
