--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
