Enviar email para recuperacion de contraseña

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cloudinary": "^1.29.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.8",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
